--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.2.2
-opencv-python-headless==4.5.3.56
-mediapipe==0.8.9.1
-numpy>=1.24.0
+opencv-python-headless==4.8.0.76
+mediapipe==0.10.9
+numpy==1.24.4
 gunicorn==20.1.0
