--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.2.2
+Flask==2.3.3
+Werkzeug==2.3.7
+gunicorn==20.1.0
+numpy==1.24.4
 opencv-python-headless==4.8.0.76
 mediapipe==0.10.9
-numpy==1.24.4
-gunicorn==20.1.0
+
